src/objects/Volunteer_Shift__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Number_of_Volunteers__c</fullName>
        <label>Desired # of Volunteers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <inlineHelpText>How many hours long is the shift?</inlineHelpText>
        <label>Duration (Hours)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Location_City__c</fullName>
        <formula>Volunteer_Job__r.Location_City__c</formula>
        <label>Job Location City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Location_State_Province__c</fullName>
        <formula>Volunteer_Job__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Location State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Location_Street__c</fullName>
        <formula>Volunteer_Job__r.Location_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Location Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Location_Zip_Postal_Code__c</fullName>
        <formula>Volunteer_Job__r.Location_Zip_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Location Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Recurrence_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Automatically set by the system scheduler to show the Job Recurrence Schedule this shift is associated with.</inlineHelpText>
        <label>Job Recurrence Schedule</label>
        <referenceTo>Job_Recurrence_Schedule__c</referenceTo>
        <relationshipLabel>Volunteer Shifts</relationshipLabel>
        <relationshipName>Volunteer_Shifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers_Still_Needed__c</fullName>
        <formula>max ( 0, Desired_Number_of_Volunteers__c -  BLANKVALUE(Total_Volunteers__c, 0))</formula>
        <label># of Volunteers Still Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date &amp; Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Note__c</fullName>
        <inlineHelpText>Text information from the system scheduler.</inlineHelpText>
        <label>System Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Volunteers__c</fullName>
        <description>This field is maintained by the VOL_VolunteerHours_ShiftRollups trigger.</description>
        <inlineHelpText>SYSTEM FIELD.  DO NOT EDIT.  The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
        <label>Total Volunteers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <label>Volunteer Job</label>
        <referenceTo>Volunteer_Job__c</referenceTo>
        <relationshipLabel>Volunteer Shifts</relationshipLabel>
        <relationshipName>Volunteer_Job_Slots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Volunteer Shift</label>
    <nameField>
        <displayFormat>Shift-{00000}</displayFormat>
        <label>ShiftID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>